# rusteegear

./: .gitignore  ANALYSE.md  ANALYSE_DESIGN_VISUEL.md  AUDIT.md  AUDIT_GAMEPLAY_2026-07-16.md  AUDIT_JEU_2026-07-17.md  AUDIT_LATENCE_MULTIJOUEUR.md  AUDIT_MMORPG.md  Cargo.toml  GAMEDESIGN_EN_LIGNE.md  GAMEDESIGN_MMORPG.md  GDD_MMORPG.md  HANDOFF.md  LICENSE  PLAN.md  QUICKSTART.md  README.md  ROADMAP_SPRINTS.md  SPRINTNETWORK.md  SPRINTS.md  SPRINT_MMORPG.md  analysedev.md  auditGDD10h.md  audit_sprint.md  build.rs  creation3DBlenderOrganicSuite.md  creation3DBlendersuite.md  final_sprint_A_10haudit.md  optimisation3D.Analys.md  rapport_qualite_creatures_vs_hyper3d.md  reflexion.md  sprint B otpimsaiton10h.md  sprint10audit.md  sprintB10haudit.md  sprintC_10haudit.md  sprintCoptimisation10h.md  sprintD_optimisation10h.md  sprintE10haudit.md  sprintEoptimisation10h.md  sprintF10haudit.md  (+4 more)
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
assets/: player_scene.json
assets/bundle/: default_settings.json  m0_creature.glb  m100_nature_campfire.glb  m100_shore_drift_line.glb  m101_nature_boat.glb  m101_shore_driftwood.glb  m102_nature_signpost.glb  m102_shore_gentle_bank.glb  m102_village_bags.glb  m103_nature_pine2.glb  m103_shore_natural_basin.glb  m104_nature_tree.glb  m104_shore_nest.glb  m105_fauna_goose.glb  m105_nature_tree2.glb  m105_shore_pebble_group.glb  m106_fairy_hero.glb  m106_fauna_frog.glb  m106_nature_pine.glb  m106_shore_rooted_bank.glb  m106_village_cauldron.glb  m107_nature_bush.glb  m107_shore_shell_cluster.glb  m108_fauna_deer.glb  m108_fauna_heron.glb  m108_shore_smooth_rock.glb  m108_village_smoke.glb  m109_fauna_rabbit.glb  m109_shore_steep_bank.glb  m109_village_sawmill_saw.glb  m10_creature11.glb  m110_fauna_squirrel.glb  m110_shore_water_ripple.glb  m110_village_door_round.glb  m111_fauna_fox.glb  m111_fauna_snail.glb  m111_grotto_back_wall.glb  m111_village_door_straight.glb  m112_fauna_boar.glb  m112_grotto_bones.glb  (+433 more)
assets/examples/: demo_composants.json  demo_controleur.json
assets/icon/: icon.icns
assets/models/: creature.glb  creature10.glb  creature100.glb  creature101.glb  creature102.glb  creature103.glb  creature104.glb  creature105.glb  creature106.glb  creature107.glb  creature108.glb  creature109.glb  creature11.glb  creature110.glb  creature111.glb  creature112.glb  creature12.glb  creature13.glb  creature14.glb  creature15.glb  creature16.glb  creature17.glb  creature18.glb  creature19.glb  creature2.glb  creature20.glb  creature21.glb  creature22.glb  creature23.glb  creature24.glb  creature25.glb  creature26.glb  creature27.glb  creature28.glb  creature29.glb  creature3.glb  creature30.glb  creature31.glb  creature32.glb  creature33.glb  (+482 more)
docs/: ANALYSE_DESIGN_VISUEL.md  AUDIT_JEU_2026-07-18.md  AnalyseAudit12h24.md  FIRST_GAME.md  KNOWN_LIMITATIONS.md  LUA_PORTABLE.md  MENTAL_MODEL.md  PHASES_DEV.md  PILOT.md  ROADMAP_SPRINTS.md  SPRINT3D_AUDIT_GAMEDESIGN.md  SPRINTNETWORK.md  SprintAudit12h24.md  TEST_FEEDBACK_FORM.md  TEST_SCENARIO.md  architecture.md  creation3DBlendersuite.md  creationAnimation3DBlendersuite.md  integrationMCPfuture.md  integration_siege_scene.md  mapsJeuReflexionAnalyse.md  rapport_qualite_creatures_vs_hyper3d.md  sprint.19matin.md  sprint10audit.md  sprint2audijeu0718.md  sprint9audit.md  sprintcration3delement.md  sprintjeurefelxion.md  sprintoptimation3daudit10h.md
docs/audit-2026-07-20/: 00_SYNTHESE.md  01_ARCHITECTURE_DETTE.md  02_PRODUIT_AVANCEMENT.md  03_QUALITE_TESTS.md  04_RESEAU_DEPLOIEMENT.md  05_ASSETS_PIPELINE.md  06_CHANTIER_EN_COURS.md  07_PLAN_ACTION.md
docs/audits/: README.md  app-misc.md  app-mod.md  app-network.md  editor.md  misc.md  net.md  physics.md  renderer.md  scene-import.md  scene-mod.md
docs/guide-createur/: index.md
examples/: gen_components_demo.rs  gen_controller_demo.rs  gen_first_game_preview.rs  gen_icon.rs  load_test_client.rs  phase_f_measure.rs  phase_l_mode_check.rs  smoke_vps.rs
examples/broken_scene/: README.md  scene.json
examples/first_game/: README.md  project.rusteegear.json
examples/scripts/: move_between_points.lua  rotate.lua  simple_enemy.lua  trigger_door.lua
packaging/: EXPORT.md  android_env.sh  build_android.md  build_apk.sh  build_dmg.sh  build_ios.md  build_ios.sh  build_web.sh  install_ios_device.sh
packaging/ios-xcode/: project.yml
packaging/web/: index.html
scripts/: check_bundle_orphans.py  check_unwrap_budget.py  deploy_vps.sh  doctor.sh
scripts/blender/: check_creatures.py  check_hamlet_pack.py  check_organic_pack.py  check_siege_pack.py  creature_kit.py  gen_creature2.py  gen_creature21_elephant.py  gen_creature62_fox.py  gen_creature_pack103_112.py  gen_creature_pack22_26.py  gen_creature_pack27_31.py  gen_creature_pack32_36.py  gen_creature_pack37_41.py  gen_creature_pack42_51.py  gen_creature_pack52_61.py  gen_creature_pack63_67.py  gen_creature_pack68_72_organic.py  gen_creature_pack73_82.py  gen_creature_pack83_92.py  gen_creature_pack93_102.py  gen_fairy_hero.py  gen_fauna_decor_pack.py  gen_fauna_decor_pack3.py  gen_flora_pack.py  gen_flora_pack2.py  gen_flora_pack3.py  gen_flora_pack4.py  gen_flora_pack_animated.py  gen_grotto_decor.py  gen_grotto_hero.py  gen_grotto_rocks.py  gen_hamlet_buildings.py  gen_hamlet_buildings2.py  gen_hamlet_decor.py  gen_hamlet_props.py  gen_hamlet_props2.py  gen_hamlet_structures.py  gen_items_pack01_10.py  gen_items_pack11_20.py  gen_items_pack21_30.py  (+27 more)
src/: assets.rs  crash_log.rs  lib.rs  log_buffer.rs  main.rs  pilot.rs  project.rs  time_compat.rs
src/app/: ai.rs  asset_ops.rs  autosave.rs  build_config.rs  combat.rs  console.rs  creature_attack.rs  debug_draw.rs  demos.rs  fireball.rs  health.rs  input.rs  inventory.rs  locale.rs  minimap.rs  mod.rs  mod_tests.rs  multiplayer.rs  network_client.rs  network_client_tests.rs  (+9 more)
tests/: broken_scene_example.rs  examples_scenes.rs  first_game_example.rs  flora_assets.rs  golden_render.rs  golden_skinning.rs  local_server.rs  pilot_bridge.rs  play_mode_audit.rs  project_manager.rs  project_manifest.rs
(+87 files in other folders)
