[package]
name = "motor3derust"
version = "0.1.0"
edition = "2024"
description = "Moteur de jeu 3D minimaliste (style Unity) en Rust"

[package.metadata.bundle]
name = "RusteeGear"
identifier = "com.berthod.rusteegear"
short_description = "Moteur de jeu 3D minimaliste"
category = "public.app-category.developer-tools"
copyright = "© 2026 Berthod"
icon = ["assets/icon/icon.icns"]

# Bibliothèque partagée : rlib pour le bin desktop, cdylib pour le .so Android.
[lib]
name = "motor3derust"
crate-type = ["rlib", "cdylib"]

# Release optimisée pour les livrables (.dmg / .apk / .ipa) : binaire plus petit et rapide.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Itération rapide : compile bien plus vite que `release` tout en restant utilisable
# (le profil `dev` non optimisé rend le rendu/physique trop lents pour tester).
#   cargo run --profile dev-fast
[profile.dev-fast]
inherits = "dev"
opt-level = 1

# Packaging APK (cargo-apk).
[package.metadata.android]
package = "com.berthod.motor3derust"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 33

[package.metadata.android.application]
label = "RusteeGear"

# Clé de signature release (générée par packaging/build_apk.sh, non versionnée).
[package.metadata.android.signing.release]
path = "packaging/release.keystore"
keystore_password = "android"

[features]
# Force le mode Player dès le lancement (sans --player) : utilisé pour exporter un
# « player » jouable du jeu créé (.dmg/.app double-cliquable qui démarre sur la scène).
player_build = []

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
include_dir = "0.7.4"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
env_logger = "0.11.10"
glam = { version = "0.33.1", features = ["serde"] }
gltf = "1.4.1"
kira = "0.12.1"
log = "0.4.32"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
pollster = "0.4.0"
rapier3d = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wgpu = "29.0.3"
winit = "0.30.13"

# Sélecteur de fichiers + client HTTP (génération de scripts par IA) : desktop uniquement.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
rfd = "0.17.2"
ureq = { version = "2.12", features = ["json"] }

# Android : winit a besoin d'un backend android-activity + logger natif.
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.13", features = ["android-native-activity"] }
android_logger = "0.14"
